Update to chrismas hats on links

--- a/CommonADGroups.html
+++ b/CommonADGroups.html
@@ -2,6 +2,7 @@
 <html>
   <head>
 
+    <!-- Loads the icon and name of the page -->
     <title>Common AD Groups</title>
     <link
       rel="icon"
@@ -29,6 +30,7 @@
           URMC Bookmarks
         </span>
       </a>
+      <!-- Creates the search form for searching common AD groups -->
       <form id="filter-form" onsubmit="goToFirstLink(event)">
         <input
         type="text"
@@ -41,6 +43,7 @@
       <a href="CommonADGroups.html">Common AD Groups</a>
     </nav>
 
+    <!-- Where all the AD Group get added-->
       <div id="ad-groups">
 
       </div>
