--- a/HDBookmarks3.0.html
+++ b/HDBookmarks3.0.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <!--Load the icon and title on for webpage -->
     <title>HDBookmarks3.0</title>
     <link
       rel="icon"
@@ -25,6 +25,7 @@
     <link rel="preload" href="Assests/UIT_Alerts.png" as="image">
     <link rel="preload" href="Assests/Chrismas_Hat.png" as="image">
 
+    <!-- Loads files for html file-->
     <link rel="stylesheet" href="HDBookmarks3.0.css">
     <script src="HDBookmarks3.0.js"></script>
     <script src="snowfall.js"></script>
@@ -54,7 +55,7 @@
 
     <div class="page">
       <div class="information">
-        <div><a href="Update.html">3.1 Update information</a>Snow: <button id="snow-toggle" onclick="setSnowToggle(this)"><div id="ball"></div></button></div>
+        <div><a href="Update.html">3.1 Update information</a>Snow: <button id="snow-toggle" onclick="setSnowToggle(this)" tabindex="-1"><div id="ball"></div></button></div>
         <p>For Reqest and Bug fixes Contact: Dustin Meyer</p>
       </div>
       <div class="copy-buttons">
@@ -79,10 +80,10 @@
         <sub>Click to Copy</sub>
       </button>
     </div>
-
-      <div class="links" id="all-links">
-      </div>
+      <!-- Links added here when page is generated -->
+    <div class="links" id="all-links">
     </div>
+  </div>
 
 
   </body>
