--- a/Update.html
+++ b/Update.html
@@ -1,18 +1,21 @@
 <html>
   <head>
+    <!-- Links the css style files-->
     <link rel="stylesheet" href="HDBookmarks3.0.css">
     <link rel="stylesheet" href="Update.css">
+
+    <!--Load the icon and title on for webpage -->
     <title>Update and Patches</title>
     <link
     rel="icon"
     href="\\ntsdrive05\isd_share\Cust_Serv\Help Desk Info\Tools\HDBookmarks_2.0\URMC.ico"
     type="image/x-icon"
-  />
+    />
 
-        <!-- Renders the font used for the website-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <!-- Renders the font used for the website-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
     <nav >
