--- a/Pages/CommonADGroups.html
+++ b/Pages/CommonADGroups.html
@@ -15,22 +15,27 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="HDBookmarks3.0.css">
-    <link rel="stylesheet" href="CommonADGroups.css">
-    <script src="CommonADGroup.js"></script>
-    <script src="snowfall.js"></script>
+    <link rel="stylesheet" href="../Styles/navbar.css">
+    <link rel="stylesheet" href="../Styles/CommonADGroups.css">
+    <link rel="stylesheet" href="../Styles/global.css">
+    
+    <script src="../CommonADGroup.js"></script>
+    <script src="../snowfall.js"></script>
   </head>
 
   <!--Load the links on page when opening-->
   <body onload="loadPage()" id="main">
-    <nav>
-      <a href="HDBookmarks3.0.html">
+    <nav >
+      <a href="../HDBookmarks3.0.html">
         <span>  
           <img src="\\ntsdrive05\isd_share\Cust_Serv\Help Desk Info\Tools\HDBookmarks_2.0\URMC.ico" type="image/x-icon"/>
           URMC Bookmarks
         </span>
+        <div id="other-links">
+          <a href="../Pages/SystemSummary.html">System Summary Index</a>
+          <a href="../Pages/CommonADGroups.html">Common AD Groups</a>
+        </div>
       </a>
-      <!-- Creates the search form for searching common AD groups -->
       <form id="filter-form" onsubmit="goToFirstLink(event)">
         <input
         type="text"
@@ -40,13 +45,12 @@
         placeholder="Search for link" 
         />
     </form>
-      <a href="CommonADGroups.html">Common AD Groups</a>
+
     </nav>
-
     <!-- Where all the AD Group get added-->
-      <div id="ad-groups">
+    <div id="ad-groups">
 
-      </div>
+    </div>
     </div>
 
 
