--- a/Pages/Update.html
+++ b/Pages/Update.html
@@ -1,8 +1,9 @@
 <html>
   <head>
     <!-- Links the css style files-->
-    <link rel="stylesheet" href="HDBookmarks3.0.css">
-    <link rel="stylesheet" href="Update.css">
+    <link rel="stylesheet" href="../Styles/navbar.css">
+    <link rel="stylesheet" href="../Styles/Update.css">
+    <link rel="stylesheet" href="../Styles/global.css">
 
     <!--Load the icon and title on for webpage -->
     <title>Update and Patches</title>
@@ -19,13 +20,16 @@
   </head>
   <body>
     <nav >
-      <a href="HDBookmarks3.0.html">
-        <span>  
+      <a href="../HDBookmarks3.0.html">
+        <span> 
           <img src="\\ntsdrive05\isd_share\Cust_Serv\Help Desk Info\Tools\HDBookmarks_2.0\URMC.ico" type="image/x-icon"/>
           URMC Bookmarks
         </span>
+        <div id="other-links">
+          <a href="../Pages/SystemSummary.html">System Summary Index</a>
+          <a href="../Pages/CommonADGroups.html">Common AD Groups</a>
+        </div>
       </a>
-      <a href="CommonADGroups.html">Common AD Groups</a>
     </nav>
     <h1>Update 3.1 - 12/20/24</h1>
     <h2>Chrismas Stuff</h2>
