Turning off some chrismas stuff

--- a/HDBookmarks3.0.html
+++ b/HDBookmarks3.0.html
@@ -23,14 +23,14 @@
     <link rel="preload" href="Assests/Down_Detector.png" as="image">
     <link rel="preload" href="Assests/URMC_System_Status.png" as="image">
     <link rel="preload" href="Assests/UIT_Alerts.png" as="image">
-    <link rel="preload" href="Assests/Chrismas_Hat.png" as="image">
+    <link rel="prefetch" href="Pages/SystemSummary.html">
+    
 
     <!-- Loads files for html file-->
     <link rel="stylesheet" href="Styles/HDBookmarks3.0.css">
     <link rel="stylesheet" href="Styles/navbar.css">
     <link rel="stylesheet" href="Styles/global.css">
     <script src="HDBookmarks3.0.js"></script>
-    <script src="snowfall.js"></script>
 
   </head>
 
@@ -60,7 +60,7 @@
 
     <div class="page">
       <div class="information">
-        <div><a href="Pages/Update.html">3.1 Update Logs</a>Snow: <button id="snow-toggle" onclick="setSnowToggle(this)" tabindex="-1"><div id="ball"></div></button></div>
+        <div><a href="Pages/Update.html">3.1 Update Logs</a></div>
         <p>For Request and Bug Fixes Contact: Dustin Meyer</p>
       </div>
       <div class="copy-buttons">
