--- a/Pages/SystemSummary.html
+++ b/Pages/SystemSummary.html
@@ -47,9 +47,9 @@
       <section id="number">
         <button class="collapsible"># <hr></button>
         <ul>
-          <li><a href="#">@Comm (FFT)</a></li>
-          <li><a href="#">3MEncoder</a></li>
-          <li><a href="#">3Mensio</a></li>
+          <li><a href="https://urmcprod.service-now.com/kb_view.do?sysparm_article=KB0010306">@Comm (FFT)</a></li>
+          <li><a href="https://urmcprod.service-now.com/kb_view.do?sysparm_article=KB0010130">3MEncoder</a></li>
+          <li><a href="https://urmcprod.service-now.com/kb_view.do?sysparm_article=KB0015262">3Mensio</a></li>
         </ul>
       </section>
       <section id="A">
