--- a/Pages/Update.html
+++ b/Pages/Update.html
@@ -32,6 +32,30 @@
         </div>
 
     </nav>
+    <h1>Update 3.2 - 1/03/25</h1>
+
+    <h2>System Summary Page</h2>
+    <ul>
+      <li>Links are now all added</li>
+      <li>Search for System Summarys</li>
+    </ul>
+
+    <h2>UI Change</h2>
+    <ul>
+      <li>Scollable copy buttons on top of home page</li>
+      <li>Added copys for URL of PACS Access Form and eRecord Training Request Form</li>
+    </ul>
+
+    <h2>Code updates</h2>
+    <ul>
+      <li>Reworked the nav bar css</li>
+    </ul>
+
+    <h2>Removed</h2>
+    <ul>
+      <li>Removed Chrismas updates</li>
+    </ul>
+
     <h1>Update 3.1 - 12/20/24</h1>
     <h2>Chrismas Stuff</h2>
     <ul>
