eRecord System Summaries

--- a/Pages/CommonADGroups.html
+++ b/Pages/CommonADGroups.html
@@ -34,6 +34,7 @@
         <div id="other-links">
           <a href="../Pages/SystemSummary.html">System Summary Index</a>
           <a href="../Pages/CommonADGroups.html">Common AD Groups</a>
+          <a href="../Pages/eRecordSystemSummary.html">eRecord System Summaries</a>
         </div>
 
       <form id="filter-form" onsubmit="goToFirstLink(event)">
