--- a/Pages/Update.html
+++ b/Pages/Update.html
@@ -29,9 +29,24 @@
         <div id="other-links">
           <a href="../Pages/SystemSummary.html">System Summary Index</a>
           <a href="../Pages/CommonADGroups.html">Common AD Groups</a>
+          <a href="../Pages/eRecordSystemSummary.html">eRecord System Summaries</a>
         </div>
 
     </nav>
+    <h1>Update 3.3 - 1/24/2025</h1>
+
+    <h2>eRecord System Summay Page</h2>
+    <ul>
+      <li>Links for all new eRecord system Summaries</li>
+      <li>Page will not have search due to the small number of groups</li>
+    </ul>
+
+    <h2>Home Page</h2>
+    <ul>
+      <li>GP and Cisco download links have been added for remote workers</li>
+    </ul>
+
+
     <h1>Update 3.2 - 1/03/25</h1>
 
     <h2>System Summary Page</h2>
