--- a/HDBookmarks3.0.html
+++ b/HDBookmarks3.0.html
@@ -45,6 +45,7 @@
         <div id="other-links">
           <a href="Pages/SystemSummary.html">System Summary Index</a>
           <a href="Pages/CommonADGroups.html">Common AD Groups</a>
+          <a href="Pages/eRecordSystemSummary.html">eRecord System Summaries</a>
         </div>
       </a>
       <form id="filter-form" onsubmit="goToFirstLink(event)">
