Updates to bookmarks home screen

--- a/Pages/Update.html
+++ b/Pages/Update.html
@@ -44,6 +44,8 @@
     <h2>Home Page</h2>
     <ul>
       <li>GP and Cisco download links have been added for remote workers</li>
+      <li>Moved Copy buttons to the left side and now is scrollable if more are added</li>
+      <li>Seperated the scroll from being the whole page to just the links</li>
     </ul>
 
 
